Add constitution vs system prompts documentation
- Add comprehensive comparison document for public repo
- Create SEO-optimized Medium article (gitignored)
- Update gitignore to exclude medium-articles folder
- Explain the key differences and benefits
- Include real-world examples and impact

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore Medium article (not for public repo)
+# Ignore Medium articles (not for public repo)
 medium-article.md
+medium-articles/
 
 # Ignore IDE and system files
 .DS_Store
